--- a/pom.xml
+++ b/pom.xml
@@ -96,14 +96,14 @@
 	<distributionManagement>
 	    <repository>
 	      <id>nexus</id>
-	      <name>Yubinax Solutions Releases Nexus Repository</name>
-	      <url> http://44.210.242.182:1729/yubinax/repository/paynow-hub-release/</url>
+	      <name>eBay Releases Nexus Repository</name>
+	      <url>http://3.69.46.26:8081/repository/ebay-app-project-releases/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Yubinax Solutions Snapshot Nexus Repository </name>
-	      <url>http://44.210.242.182:1729/yubinax/repository/paynow-hub/</url>
+	      <name>eBay Snapshot Nexus Repository </name>
+	      <url>http://3.69.46.26:8081/repository/ebay-app-project-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
