--- a/pom.xml
+++ b/pom.xml
@@ -129,7 +129,7 @@
 				<configuration>
 					<scanIntervalSeconds>10</scanIntervalSeconds>
 					<webApp>
-						<contextPath>/maven-web-application</contextPath>
+						<contextPath>/maven-myweb-application</contextPath>
 					</webApp>
 				</configuration>
 			</plugin>
